--- a/assets/styles.css
+++ b/assets/styles.css
@@ -8,13 +8,12 @@
 	-webkit-tap-highlight-color: transparent;
 }
 html{
-	background: #fff;
 }
 body{
 	font-family: 'Anyway Type', 'Myriad Pro', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', sans-serif;
 	color: #555;
 	text-align: center;
-	background: #f5f5f5;
+	background: #16de9f;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -60,41 +59,19 @@ ol, ul{
 }
 .mask{
 	position: fixed;
-	z-index: 999;
-	border: .4rem solid #00df9e;
-	background: #00df9e;
-	pointer-events: none;
-}
-.mt, .mb{
-	height: 0;
-	width: 100%;
+	top: 0;
 	left: 0;
+	z-index: 9999;
+	/* background: #ff0; */
+	pointer-events: none;
+	width: 100vw;
+	height: 100vh;
+	padding: 2rem;
 }
-.mb{
-	bottom: -20rem;
-	height: 20.8rem;
-}
-.mb2{
-	bottom: .8rem;
-	height: 2rem;
-	width: 200px;
-	border: none;
-	background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
-}
-.mt{
-	top: -20rem;
-	height: 20.8rem;
-}
-.mv{
-	bottom: 0;
-	height: 999em;
-	width: 0;
-}
-.ml, .ml2{left: -20rem;width: 20.8rem;}
-.mr, .mr2{right: -20rem;width: 20.8rem;}
-.ml2, .mr2{bottom: none;top: 0;}
-.x-corner {
-	display: none;
+.mask > .inner{
+	border: .8rem solid #0700d9;
+	height: 100%;
+	width: 100%;
 }
 
 /* ~The End */
@@ -123,14 +100,19 @@ footer{
 	font-size: .75rem;
 	clear: both;
 	text-align: center;
-	background: #fff;
-	color: #222;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	/* height: 30vh; */
+	z-index: 99999;
 }
-footer .inner{
-	padding: 1rem 0 1.8rem;
+footer > .inner{
+
 }
-footer a{
-	color: #222;
+footer svg{
+	max-width: 30%;
+	max-height: 100%;
 }
 
 /*~Main*/
@@ -141,7 +123,6 @@ main{
 	font-size: 1rem;
 	max-width: 80rem;
 	margin: 0 auto;
-	background: #f5f5f5;
 }
 @keyframes slowShow {
 	0% {opacity: 0;}
@@ -149,87 +130,42 @@ main{
 }
 /* ~Header */
 header{
-	padding: 8rem 0 9rem;
-	background: #f5f5f5;
+
 }
-header .inner{
-	max-width: 80rem;
-	padding:  0 5%;
+header > .inner{
+	/* max-width: 80rem; */
+	height: 160vh;
+	margin-top: 5rem;
+}
+.logo{
+	max-width: 100vw;
+	max-height: 60vh;
+}
+.logo img{
 	margin: 0 auto;
-	display: flex;
-	justify-content: center;
-	align-items: flex-start;
-	/* flex-direction: column; */
-}
-h1{
-	font-size: 4rem;
-	color: #333;
-	font-weight: 700;
-	font-feature-settings: 'tnum';
-	font-family: "Anyway Serif", "Title Serif", "Source Han Serif SC","Songti SC", SimSun, serif;
-	display: block;
-	text-align: left;
-	margin: 0 1em 0 0;
-	position: relative;
-	background: #fff;
-	padding: .05em .4em .2em;
-}
-h1 sup {
-	font-size: .15em;
-	line-height: 1.2;
-	margin: 0;
-	border: none;
-	display: block;
-	background: #00df9e;
-	color: #fff;
-	padding: .22em .3em .1em;
-	font-family: "Anyway Type", "PingFang SC", "Microsoft YaHei", sans-serif;
-	font-weight: 400;
-	position: absolute;
-	display: inline-block;
-	right: -3em;
-	top: 1em;
-	text-shadow: none;
+	max-width: 100%;
+	max-height: 60vh;
 }
 .tagline{
-	font-size: .875rem;
-	font-weight: 400;
-	max-width: 80ch;
-	color: #666;
-	line-height: 1.78;
-	text-align: left;
-	/* background: #00df9e; */
-	padding: 0 0 .2em 2rem;
-}
-.tagline ol{
-	list-style: none;
-}
-.tagline ol span{
-	font-weight: 400;
-	background: #00df9e;
-	padding: .1em .25em .15em;
-	color: #333;
-	margin: 0 .3em 0 0;
-	-moz-font-feature-settings: 'tnum';
-	-webkit-font-feature-settings: 'tnum';
-	font-feature-settings: 'tnum';
-}
-.tagline a{
-	color: #666;
+	margin: 50vh auto 0;
+	color: #0700d9;
+	letter-spacing: .2em;
 	font-weight: 700;
-}
-.tagline a:hover{
-	background: #00df9e;
-	color: #333;
+	font-size: 1.25rem;
+	max-width: 40em;
 }
 /* ~Post */
 .posts > .inner{
 	display: flex;
 	flex-wrap: wrap;
+	flex-direction: column;
+	align-items: center;
 }
 .post{
-	flex-basis: 33.33%;
+	flex-basis: 50%;
+	max-width: 66vw;
 	/* padding: 2rem; */
+	margin: 0 0 6rem;
 }
 .post-content img{
 	max-width: 100%;
@@ -245,8 +181,8 @@ h1 sup {
 	top: 0;
 	opacity: 0;
 	padding: 2rem;
-	background: #fff;
 	transition: all .12s ease-out;
+	background: #fff;
 }
 .post:hover .post-meta{
 	opacity: 1;
