--- a/_layouts/dev.html
+++ b/_layouts/dev.html
@@ -45,14 +45,15 @@
 	</header>
 
 	<main id="whatever">
-		{{ content }}
+		<!-- {{ content }} -->
+		Coming Soon
 	</main>
 
 
-	<div class="the-end">
+	<!-- <div class="the-end">
 		<p></p>
 		To be Continued...
-	</div>
+	</div> -->
 
 	<footer >
 		<div class="inner">
