--- a/_layouts/dev.html
+++ b/_layouts/dev.html
@@ -50,12 +50,12 @@
 		<div class="posts">
 		{% for post in site.posts %}
 			<article class="post in-view" style="background-color:#{{ post.bg }};color:#{{ post.border }};border-color:#{{ post.fill }};">
+				<div class="post-cover" style="background-image:url(assets/bg{{ post.ep }}.png)"></div>
 				<div class="post-meta {{ post.title-position }}">
 					<div class="post-ep">{{ post.ep }}</div>
 					<h1>{{ post.title }}</h1>
-					<a href="" style="color:#{{post.border}}">立即收听</a>
+					<a href="https://music.163.com/#/dj?id={{ post.netease-id }}" target="_blank" style="color:#{{post.border}}">立即收听</a>
 				</div>
-				<div class="post-cover" style="background-image:url(assets/bg{{ post.ep }}.png)"></div>
 			</article>
 		{% endfor %}
 		</div>
