略更新了样式

--- a/_layouts/dev.html
+++ b/_layouts/dev.html
@@ -39,7 +39,7 @@
 				<img src="assets/logo.png">
 			</div>
 			<div class="tagline" id="tagline">
-				Whatever.FM 是一档无拘束、无特定主题、无固定更新周期的三无播客。
+				Whatever.FM 是一档无拘束、无特定主题、无固定更新周期的三无播客。<br>可通过<a href="#">网易云音乐</a>、<a href="#">Apple 播客</a>和其他泛用型博客客户端订阅收听。
 			</div>
 
 
