--- a/_layouts/dev.html
+++ b/_layouts/dev.html
@@ -39,7 +39,7 @@
 				<img src="assets/logo.png">
 			</div>
 			<div class="tagline" id="tagline">
-				Whatever.FM 是一档无拘束、无特定主题、无固定更新周期的三无播客。<br>可通过<a href="#">网易云音乐</a>、<a href="#">Apple 播客</a>和其他泛用型博客客户端订阅收听。
+				Whatever.FM 是一档无拘束、无特定主题、无固定更新周期的三无播客，<br>欢迎用<a href="https://music.163.com/#/radio/?id=792392433"><span>网易云音乐</span></a>、<a href="https://itunes.apple.com/us/podcast/whatever-fm-%E9%9A%8F%E4%BE%BF%E4%BE%AC/id1447531130?mt=2"><span>Apple 播客</span></a>和其他泛用型博客客户端订阅收听~
 			</div>
 
 
