--- a/_layouts/dev.html
+++ b/_layouts/dev.html
@@ -54,7 +54,7 @@
 				<div class="post-meta {{ post.title-position }}">
 					<div class="post-ep">{{ post.ep }}</div>
 					<h1>{{ post.title }}</h1>
-					<a href="https://music.163.com/#/dj?id={{ post.netease-id }}" target="_blank" style="color:#{{post.border}}">立即收听</a>
+					<a class="post-play" href="https://music.163.com/#/dj?id={{ post.netease-id }}" target="_blank" style="color:#{{post.border}}">立即收听 →</a>
 				</div>
 			</article>
 		{% endfor %}
