更新了页面底部的联系信息

--- a/_layouts/dev.html
+++ b/_layouts/dev.html
@@ -58,6 +58,11 @@
 				</div>
 			</article>
 		{% endfor %}
+		<article class="the-end in-view">
+			<div class="inner">
+				如有任何反馈，欢迎来信告诉我们~ <br><a href="mailto:hello@anyway.fm">hello@Anyway.FM</a>
+			</div>
+		</article>
 		</div>
 	</main>
 
@@ -102,7 +107,7 @@
 		})
 
 		inView.offset({
-			top: 50,
+			top: 40,
 			right: 0,
 			bottom: 50,
 			left: 0
