更新了网站的 Meta 信息

--- a/_layouts/dev.html
+++ b/_layouts/dev.html
@@ -6,7 +6,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta name="author" content="JJ Ying" />
-	<meta name="description" content="Whatever"/>
+	<meta name="description" content="Whatever.FM 是一档无拘束、无特定主题、无固定更新周期的三无播客"/>
 
 	<link rel="stylesheet" href="assets/styles.css">
 
@@ -15,17 +15,17 @@
 	<link rel="icon" href="assets/favicon-96.png" sizes="96x96">
 	<link rel="mask-icon" href="assets/mask-icon.svg" color="#00df9e">
 
-	<meta property="og:url" content="http://ABC.Anyway.FM">
+	<meta property="og:url" content="https://Whatever.FM">
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="Whatever.FM">
-	<meta property="og:description" content="Whatever">
+	<meta property="og:title" content="Whatever.FM 随便侬">
+	<meta property="og:description" content="Whatever.FM 是一档无拘束、无特定主题、无固定更新周期的三无播客">
 	<meta property="og:image" content="https://s.anw.red/anyway.abc/preview.png">
 
 	<meta name="twitter:card" content="summary" />
-	<meta name="twitter:description" content="Whatever" />
-	<meta name="twitter:title" content="Whatever.FM" />
+	<meta name="twitter:description" content="Whatever.FM 是一档无拘束、无特定主题、无固定更新周期的三无播客" />
+	<meta name="twitter:title" content="Whatever.FM 随便侬" />
 	<meta name="twitter:site" content="@anyway__fm" />
-	<meta name="twitter:image" content="https://s.anw.red/anyway.abc/preview.png" />
+	<meta name="twitter:image" content="https://s.anw.red/whatever.fm/preview.png" />
 
 	<script type="text/javascript" src="https://s.anw.red/js/in-view.min.js"></script>
 
