--- a/assets/styles.css
+++ b/assets/styles.css
@@ -17,6 +17,8 @@ body{
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	transition: background-color .2s ease-in-out;
+	--transition-function: cubic-bezier(.91,.13,.12,.85);
+	--transition-duration: .18s;
 }
 a{
 	text-decoration: none;
@@ -54,7 +56,6 @@ ol, ul{
 	top: 0;
 	left: 0;
 	z-index: 9999;
-	/* background: #ff0; */
 	pointer-events: none;
 	width: 100vw;
 	height: 100vh;
@@ -64,6 +65,7 @@ ol, ul{
 	border: .8rem solid #0700d9;
 	height: 100%;
 	width: 100%;
+	transition: all var(--transition-duration) var(--transition-function);
 }
 /*~Footer*/
 footer{
@@ -88,11 +90,11 @@ footer svg{
 footer svg path{fill:#fff;}
 #logo-stroke{
 	fill:#0700d9;
-	transition: fill .2s ease-in-out;
+	transition: fill var(--transition-duration) var(--transition-function);
 }
 #logo-fill{
 	fill:#fff;
-	transition: fill .2s ease-in-out;
+	transition: fill var(--transition-duration) var(--transition-function);
 }
 /*~Main*/
 main{
@@ -111,15 +113,17 @@ header{
 }
 header > .inner{
 	/* max-width: 80rem; */
-	height: 160vh;
+	/* height: 160vh; */
 	margin-top: 5rem;
 }
 .logo{
 	max-width: 100vw;
 	animation: slowShow .4s cubic-bezier(1,0,.5,.5);
 	max-height: 60vh;
-	background: #16de9f;
+	/* background: #16de9f; */
 	color: #0700d9;
+	z-index: 999999;
+	position: relative;
 }
 .logo img{
 	margin: 0 auto;
@@ -127,15 +131,18 @@ header > .inner{
 	max-height: 60vh;
 }
 .tagline{
-	margin: 50vh auto 0;
+	margin-top: 35vh;
 	color: #0700d9;
+}
+.tagline > .inner{
+	max-width: 50em;
+	margin: 0 auto;
+	padding: 0 4rem 60vh;
 	letter-spacing: .1em;
 	font-weight: 700;
 	font-size: 1.25rem;
 	line-height: 1.7;
-	max-width: 50em;
-	transform: translateY(.01em);
-	padding: 0 4rem;
+transform: translateY(.01em);
 }
 .tagline a{
 	/* border-bottom: .1rem solid #fff; */
