--- a/_layouts/dev.html
+++ b/_layouts/dev.html
@@ -9,6 +9,7 @@
 	<meta name="description" content="Whatever.FM 是一档无拘束、无特定主题、无固定更新周期的三无播客"/>
 
 	<link rel="stylesheet" href="assets/styles.css">
+	<link rel="alternate" type="application/rss+xml" title="Whatever.FM" href="https://whatever.fm/rss.xml">
 
 	<link rel="icon" href="assets/favicon-16.png" sizes="16x16">
 	<link rel="icon" href="assets/favicon-32.png" sizes="32x32">
@@ -44,7 +45,6 @@
 					Whatever.FM 是一档无拘束、无特定主题、无固定更新周期的三无播客，<br>欢迎用<a href="https://music.163.com/#/radio/?id=792392433"><span>网易云音乐</span></a>、<a href="https://itunes.apple.com/us/podcast/whatever-fm-%E9%9A%8F%E4%BE%BF%E4%BE%AC/id1447531130?mt=2"><span>Apple 播客</span></a>和其他泛用型博客客户端订阅收听~
 				</div>
 			</div>
-
 
 		</div>
 	</header>
