更新了页面 RSS

--- a/_layouts/production.html
+++ b/_layouts/production.html
@@ -9,6 +9,7 @@
 	<meta name="description" content="Whatever.FM 是一档无拘束、无特定主题、无固定更新周期的三无播客"/>
 
 	<link rel="stylesheet" href="https://s.anw.red/whatever.fm/styles.css">
+	<link rel="alternate" type="application/rss+xml" title="Whatever.FM" href="https://whatever.fm/rss.xml">
 
 	<link rel="icon" href="https://s.anw.red/whatever.fm/favicon-16.png" sizes="16x16">
 	<link rel="icon" href="https://s.anw.red/whatever.fm/favicon-32.png" sizes="32x32">
