--- a/_layouts/dev.html
+++ b/_layouts/dev.html
@@ -42,7 +42,7 @@
 			{% assign first = site.posts.first %}
 			<div class="tagline" id="tagline">
 				<div class="inner">
-					Whatever.FM 是一档无拘束、无特定主题、无固定更新周期的三无播客，<br>欢迎用<a href="https://music.163.com/#/radio/?id=792392433"><span>网易云音乐</span></a>、<a href="https://itunes.apple.com/us/podcast/whatever-fm-%E9%9A%8F%E4%BE%BF%E4%BE%AC/id1447531130?mt=2"><span>Apple 播客</span></a>和其他泛用型博客客户端订阅收听~
+					Whatever.FM 是一档无拘束、无特定主题、无固定更新周期的三无播客，<br>欢迎用<a href="https://www.xiaoyuzhoufm.com/podcast/5e284e0d418a84a04626959d"><span>小宇宙</span></a>、<a href="https://music.163.com/#/radio/?id=792392433"><span>网易云音乐</span></a>、<a href="https://itunes.apple.com/us/podcast/whatever-fm-%E9%9A%8F%E4%BE%BF%E4%BE%AC/id1447531130?mt=2"><span>Apple 播客</span></a>和其他泛用型博客客户端订阅收听~
 				</div>
 			</div>
 
@@ -111,8 +111,9 @@
 		})
 
 		// 下滚到第一页时候更改背景色
-		inView('.post-1')
+		inView('.post')
 		.on('enter', el => {
+			console.log(el.dataset.bg);
 			document.body.style.backgroundColor = el.dataset.bg
 		})
 
